# validator-scoring-sidecar

./: .dockerignore  .env.devnet.example  .env.testnet.example  .gitignore  Dockerfile  README.md  docker-compose.participate.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml  vendor-freshness.yml
docs/: Configuration.md  Deployment.md  Overview.md  Usage.md
scripts/: check_vendor_freshness.py  echo_red_team_probe.py
src/validator_scoring_sidecar/: __init__.py  __main__.py  _modal_app.py  chain.py  cli.py  commit.py  config.py  deployment.py  failure.py  inference.py  input_package.py  local_runtime.py  manifest.py  modal_deployer.py  participate.py  preflight.py  reveal.py  round_metadata.py  score.py  scoring_client.py  state.py  sync.py  verification.py  wallet.py
src/validator_scoring_sidecar/scoring/: __init__.py  formula.py  parser.py  selector.py
src/validator_scoring_sidecar/scoring/_vendor_source/: __init__.py  commit_reveal.py  response_parser.py  score_formula.py  unl_selector.py
tests/: test_announcement.py  test_chain.py  test_cli.py  test_commit.py  test_config.py  test_deployment.py  test_inference.py  test_input_package.py  test_manifest.py  test_modal_app.py  test_participate.py  test_preflight.py  test_reveal.py  test_round_metadata.py  test_score.py  test_scoring_client.py  test_scoring_formula.py  test_scoring_parser.py  test_scoring_provenance.py  test_scoring_selector.py  test_state.py  test_sync.py  test_verification.py  test_wallet.py
