[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validator-scoring-sidecar"
version = "1.1.0"
description = "Validator-facing sidecar tooling for Post Fiat Dynamic UNL shadow verification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bip-utils>=2.12,<3",
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
  "xrpl-py>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.15,<1",
  # The bundled Modal app's tests import the real SDK; without it the whole
  # test_modal_app.py module skips silently, in CI included.
  "modal>=0.73",
]
modal = [
  "modal>=0.73",
]
local = [
  "huggingface_hub>=0.23",
]

[project.scripts]
validator-scoring-sidecar = "validator_scoring_sidecar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
# Vendored foundation modules are pinned by content hash and must never be
# reformatted or "fixed" — that would break vendor-freshness verification.
extend-exclude = ["src/validator_scoring_sidecar/scoring/_vendor_source"]

[tool.pyright]
exclude = [
  "src/validator_scoring_sidecar/scoring/_vendor_source",
  "src/validator_scoring_sidecar/_modal_app.py",
  "src/validator_scoring_sidecar/modal_deployer.py",
  "src/validator_scoring_sidecar/local_runtime.py",
]
ignore = [
  "src/validator_scoring_sidecar/scoring/_vendor_source",
  "src/validator_scoring_sidecar/_modal_app.py",
  "src/validator_scoring_sidecar/modal_deployer.py",
  "src/validator_scoring_sidecar/local_runtime.py",
]

